# ellegon-rpg

./: .gitignore  LICENSE  README.md  app.py  ellegon-campaign.schema.json  pyproject.toml  requirements.txt  system_prompt.txt
campaigns/001/: intro.txt
campaigns/002/: campaign.json
campaigns/003/: campaign.json
campaigns/barsoom_princess_rescue/: campaign.json
campaigns/cupbearer_of_ashenlight/: campaign.json
campaigns/elephant_tower_heist_kids/: campaign.json
campaigns/goblin_cave/: campaign.json
campaigns/walking_to_school/: campaign.json
ellegon/: __init__.py  cli.py  config.py
ellegon/apps/: __init__.py  api_app.py  campaign_builder.py  openai_audioplayer.py  pygame_app.py
ellegon/campaigns/: __init__.py  loader.py  models.py  schema.py
ellegon/llm/: __init__.py  gateway.py  types.py
ellegon/prompts/: __init__.py  instructions.py
ellegon/service/: __init__.py  engine.py
ellegon/sessions/: __init__.py  persistence.py  progress.py  state.py
ellegon/speech/: __init__.py  audio.py  profanity_filter.py  stt.py  tts.py
stories/: one.txt  princessofmars.txt  towerofelephant.txt  walktoschool.txt
tests/: conftest.py  test_api_app.py  test_build_instructions_contains_completion_condition.py  test_campaign_builder.py  test_campaign_validation.py  test_cli_smoke.py  test_engine_turn_updates_transcript_and_saves.py  test_get_current_act.py  test_intro_extraction.py  test_pygame_helpers.py  test_save_load_roundtrip.py  test_stt.py
tests/fixtures/campaigns/test_campaign/: campaign.json
